# html-minifier-php

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  composer.json
rust/: Cargo.toml  Cross.toml  clippy.toml  rustfmt.toml
rust/benches/: minifier_bench.rs
rust/src/: config.rs  constants.rs  ffi.rs  lib.rs  token.rs  tokenizer.rs
rust/src/html/: context.rs  mod.rs  processor.rs  utils.rs
rust/src/minifiers/: css.rs  javascript.rs  mod.rs
rust/tests/: constants_test.rs  css_test.rs  html_test.rs  html_utils_test.rs  javascript_test.rs
src/: HTMLMinifier.php  MinifierException.php  MinifierOptions.php
src/Lib/: libhtml_minifier_ffi.aarch64-apple-darwin.dylib  libhtml_minifier_ffi.x86_64-apple-darwin.dylib
