[package]
name = "html_minifier_ffi"
version = "1.0.0"
edition = "2021"

[lib]
name = "html_minifier_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
memchr = "2.7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "minifier_bench"
harness = false

[profile.release]
lto = "thin"           # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
opt-level = 3          # Maximum optimization
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, faster unwinding
